apps/clusterscope/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${CLUSTERSCOPE_NAMESPACE:-clusterscope}
